--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -326,7 +326,7 @@ At the core, we use a very simple conceptual model for constraints (see Figure \
 \emph{RDF constraints} are either simple constraints or complex constraints. \emph{Simple constraints} denotes the set of atomic constraints with respect to a single constraining element -- we will come to the notion of a constraining element in a second. In contrast, there are \emph{complex constraints}, i.e., the set of constraints which are created out of simple and/or other complex constraints. This structure therefore allows to build complex constraints out of other (simple or complex) constraints. Regarding our database of constraint types, 60\% of the constraint types are used to instantiate simple constraints and 26\% complex constraints. 
 Constraints of additional 14\% of the constraint types are complex constraints as well which can be simplified and therefore formulated as simple constraints if additional constraining elements are introduced to cover them.
 
-The properties describing a simple constraint are very structural\tb{Kai, do you mean structured?}. The central property is the \emph{constraining element} which refers to one of 103 constraining elements described in our technical report \cite{BoschNolleAcarEckert2015}. Constraining elements are for example taken from Description Logics, another concrete example would be the SPARQL function REGEX where a regular expression is checked against some property value. In most cases, constraining elements directly correspond to a constraint type, sometimes (as for REGEX) they are shared by several constraint types. Complex constraints again need several constraining elements to be expressed.
+The properties describing a simple constraint are very structural, i.e., the properties describe the structure of constraints. The central property is the \emph{constraining element} which refers to one of 103 constraining elements described in our technical report \cite{BoschNolleAcarEckert2015}. Constraining elements are for example taken from Description Logics, another concrete example would be the SPARQL function REGEX where a regular expression is checked against some property value. In most cases, constraining elements directly correspond to a constraint type, sometimes (as for REGEX) they are shared by several constraint types. Complex constraints again need several constraining elements to be expressed.
 
 Irrespective of and additional to the constraining element, there are properties to describe the actual constraint, they can also be seen as parameters for the constraining element. The \emph{context class} limits the constraint to individuals of a specific class. Depending on the constraining elements, a list of \emph{classes} can be provided, for example to determine the valid classes for a value or to define a class intersection to be used in a constraint. \emph{leftProperties} and \emph{rightProperties} are lists usually containing properties the constraint is applied to. A typical example for a constraint type with a right hand side list of properties would be \emph{literal value comparison (R-43)}, where constraints like {\small\ms{birthDate $<$ deathDate}} can be expressed. Finally, the \emph{constraining value} contains a literal value to be checked against; for instance in the case of the REGEX element, it contains the regular expression to be evaluated.
 
@@ -963,7 +963,7 @@ The W3C Data Shapes Working Group currently develops \emph{SHACL} \cite{W3C-SHAC
 
 \section{Conclusion and Future Work}
 
-In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which subsequently can be used to generate validating SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language.\tb{Aus der generischen Repräsentierung können die SPIN mappings zur Validierung generiert werden? das verstehe ich nicht} The framework consists of a very simple conceptual model using the \emph{RDF Constraints Vocabulary (RDF-CV)} which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define constraints of all 81 constraint types that to date have been identified within the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group.
+In this paper, we outlined our idea of a general framework to support the mapping of high-level constraint languages to a generic representation, which can directly be validated by providing a mapping from the generic representation to SPIN/SPARQL queries to actually validate data against constraints provided in the high-level language. The framework consists of a very simple conceptual model using the \emph{RDF Constraints Vocabulary (RDF-CV)} which has been introduced in this paper. The core of the framework is the definition of 103 constraining elements that are used to define constraints of all 81 constraint types that to date have been identified within the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group.
 The full definition of all constraint types and the generic representation of the types in RDF-CV is provided in an accompanying technical report \cite{BoschNolleAcarEckert2015}.
 
 We have demonstrated how the framework can be used to map a constraint language to RDF-CV and also how to map back from RDF-CV to the constraint language. The latter enables the transformation of semantically equivalent constraints from one constraint language to another via the RDF-CV intermediate representation.
@@ -971,7 +971,7 @@ We have demonstrated how the framework can be used to map a constraint language 
 We think that this approach is suitable
 \begin{enumerate}
   \item to implement the validation of constraints consistently across constraint languages,
-  \item to support the extension of constraint languages by means of a simple mapping\tb{was genau meinst du damit? wenn weitere constraint typen unterstützt werden sollen?}, and
+  \item to support the extension of constraint languages when additional constraint types should be supported by means of a simple mapping, and
   \item to enhance or rather establish the interoperability of different constraint languages.
 \end{enumerate}
 
