--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -138,14 +138,14 @@ In 2013, the W3C organized the \emph{RDF Validation Workshop}\footnote{\url{http
 where experts from industry, government, and academia discussed first RDF validation use cases. 
 %for RDF data validation and constraint formulation.
 In 2014, two working groups on RDF validation were established: 
-the \emph{W3C RDF Data Shapes Working Group}\footnote{\url{http://www.w3.org/2014/rds/charter}} and the \emph{DCMI RDF Application Profiles Task Group}\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
+the \emph{W3C RDF Data Shapes Working Group}\footnote{\url{http://www.w3.org/2014/rds/charter}} and the \emph{DCMI RDF Application Profiles Task Group}.\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}
 We collected the findings of these working groups and initiated a database of RDF validation requirements\footnote{Online available at: \url{http://purl.org/net/rdf-validation}}
 with the intention to collaboratively collect case studies, use cases, requirements, and solutions in a comprehensive and structured way \cite{BoschEckert2014}. 
 Based on our work in the DCMI and in cooperation with the W3C working group,
 we identified by today 81 constraint types, where each type corresponds to a specific requirement in the database. In a technical report, we explain each constraint type in detail and give examples for each represented by different constraint languages \cite{BoschNolleAcarEckert2015}.
 
 Various constraint languages exist or are being developed that support more or less of these constraint types. For our work, we focus on the following four as the ones that are most popular among data practitioners, often mentioned on mailing lists and/or being candidates or prototypes for the upcoming W3C recommendation:
-\emph{Description Set Profiles (DSP)}\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}}, \emph{Resource Shapes (ReSh)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}}, \emph{Shape Expressions (ShEx)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}}, and the \emph{Web Ontology Language} \emph{(OWL)}\footnote{\url{http://www.w3.org/TR/owl2-syntax/}}. Despite the fact that OWL is arguably not a constraint language, it is widely used in practice as such under the closed-world and unique name assumptions.
+\emph{Description Set Profiles (DSP)},\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}} \emph{Resource Shapes (ReSh)},\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}} \emph{Shape Expressions (ShEx)},\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}} and the \emph{Web Ontology Language} \emph{(OWL)}.\footnote{\url{http://www.w3.org/TR/owl2-syntax/}} Despite the fact that OWL is arguably not a constraint language, it is widely used in practice as such under the closed-world and unique name assumptions.
 
 With its direct support of validation via SPARQL, the \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org/}} is also very popular to formulate and check constraints \cite{Fuerber2010}. We consider SPIN as a low-level language in contrast to the other constraint languages where specific language constructs exist to define constraints in a declarative and in comparison more intuitive way -- although SPARQL aficionados might object particularly to the latter point.
 
@@ -167,7 +167,7 @@ We further see that OWL 2 is currently the most expressive high-level constraint
 	\label{tab:constraint-type-specific-expressivity}
 \end{table}
 
-We formerly demonstrated that a high-level constraint language like OWL 2 and DSP can be implemented by mapping the language to SPIN using SPARQL CONSTRUCT queries \cite{BoschEckert2014-2}. We provide a validation environment where own mappings from arbitrary constraint languages can be provided and tested\footnote{Online available at: \url{http://purl.org/net/rdfval-demo}, source code online available at: \url{https://github.com/boschthomas/rdf-validator}.}. The only limitations are that the constraints have to
+We formerly demonstrated that a high-level constraint language like OWL 2 and DSP can be implemented by mapping the language to SPIN using SPARQL CONSTRUCT queries \cite{BoschEckert2014-2}. We provide a validation environment where own mappings from arbitrary constraint languages can be provided and tested.\footnote{Online available at: \url{http://purl.org/net/rdfval-demo}, source code online available at: \url{https://github.com/boschthomas/rdf-validator}.} The only limitations are that the constraints have to
 be expressed in RDF and that the constraint language is expressible in SPARQL.
 
 The constraint type \emph{minimum qualified cardinality restrictions} which corresponds to the requirement \emph{R-75}\footnote{Requirements are identified in the database by an R and a number, additionally an alphanumeric identifier is provided, in this case R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES. Online at: \url{http://lelystad.informatik.uni-mannheim.de/rdf-validation/?q=node/82}} can be instantiated to formulate the constraint that publications must have at least one author which must be a person. This constraint can be expressed as follows using different constraint languages:
@@ -205,7 +205,7 @@ The constraint type \emph{minimum qualified cardinality restrictions} which corr
 SELECT ( COUNT ( ?arg1 ) AS ?c ) WHERE \{ ?arg1 ?arg2 ?o . ?o a ?arg3 . \}
 \end{ex}
 
-Note that the SPIN representation of the constraint is NOT a SPIN mapping to implement the constraint, but a direct expression of the constraint using a SPARQL CONSTRUCT query that creates a spin:ConstraintViolation if the constraint is violated. 
+Note that the SPIN representation of the constraint is \emph{not} a SPIN mapping to implement the constraint, but a direct expression of the constraint using a SPARQL CONSTRUCT query that creates a spin:ConstraintViolation if the constraint is violated. 
 
 It can be seen that the higher-level constraint languages are comparatively similar, there seems to be a pattern, a common way to express this type of constraint. Therefore, a mapping from a high-level language to another high-level language would be considerably easier. Unfortunately, there is not (yet) a high-level language that supports all constraint types. 
 
@@ -233,7 +233,7 @@ WHERE \{
     FILTER ( ?cardinality < ?minimum ) . \}
 \end{ex}
 
-The SPIN mappings for OWL 2 and DSP are rather complicated and can be found in the mappings provided by us\footnote{OWL 2 mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/OWL2_SPIN-Mapping.ttl}; DSP mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/DSP_SPIN-Mapping.ttl#L4665}}.
+The SPIN mappings for OWL 2 and DSP are rather complicated and can be found in the mappings provided by us.\footnote{OWL 2 mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/OWL2_SPIN-Mapping.ttl}; DSP mapping online available at: \url{https://github.com/boschthomas/rdf-validation/blob/b6a275fb5d71a92ae33d3b6aadd5f447351214b7/SPIN/DSP_SPIN-Mapping.ttl#L4665}}
 
 In this paper, we build on the experience gained from mapping several constraint languages to SPIN and from the analysis of the identified constraint types to create an intermediate layer, a framework that is able to describe the mechanics of all constraint types and that can be used to map high-level languages more easily. 
 
@@ -255,16 +255,16 @@ Our framework therefore provides a common ground that is solely based on the abs
 for each constraint type\footnote{RDF-CV to SPIN online available at: \url{https://github.com/boschthomas/RDF-CV-2-SPIN}\label{RDF-CV-2-SPIN}}, it is ensured that the details of the SPIN implementation are consistent irrespective of the constraint language and that the validation leads always to exactly the same results.  
 
 
-\paragraph{Constraint transformation.} Consistent implementations of constraint languages provide some advantage, but it could be argued that they are not important enough to justify the additional layer. The situation, however, is different when transformations from one constraint language to another are desired, i.e., to transform a \emph{specific constraint} (\emph{$sc_{\alpha}$}) of any constraint type expressed by language \emph{$\alpha$} into a semantically equivalent \emph{specific constraint} (\emph{$sc_{\beta}$}) of the same constraint type represented by any other language \emph{$\beta$}.
+\paragraph{Constraint transformation.} Consistent implementations of constraint languages provide some advantage, but it could be argued that they are not important enough to justify the additional layer. The situation, however, is different when transformations from one constraint language to another are desired, i.e., to transform a \emph{specific constraint} \emph{$sc_{\alpha}$} of any constraint type expressed by language \emph{$\alpha$} into a semantically equivalent \emph{specific constraint} \emph{$sc_{\beta}$} of the same constraint type represented by any other language \emph{$\beta$}.
 By defining mappings between equivalent \emph{specific constraints} and the corresponding \emph{generic constraint} (\emph{gc}) we are able to convert them automatically: 
 \begin{align*}
-  gc &=  m_1(sc_{\alpha}) \\
-  sc_{\beta} &= m_2'(gc) 
+  gc &=  m_{\alpha}(sc_{\alpha}) \\
+  sc_{\beta} &= m_{\beta}'(gc) 
 \end{align*}
 
 Thereby, we do not need to define mappings for each constraint type and each possible combination of constraint languages. Assuming that we are able to express a single constraint type like \emph{minimum qualified cardinality restrictions} within 10 languages, $n \cdot n-1 = 90$ mappings would be needed -- as mappings generally are not invertible. 
 With an intermediate generic representation of constraints, on the other side, we only need to define for each constraint type $2n = 20$ mappings -- where $10$ mappings should already exist if we have an implementation in our framework. 
-To summarize, if language developers are willing to provide two mappings -- forward and backward -- to our framework for each supported constraint type, we not only would get the consistent implementation of all languages, it would also be possible to transform semantically equivalent constraints into all constraint languages.
+To summarize, if language developers are willing to provide two mappings -- forward ($m$) and backward ($m'$) -- to our framework for each supported constraint type, we not only would get the consistent implementation of all languages, it would also be possible to transform semantically equivalent constraints into all constraint languages.
 
 
 \section{Towards a Framework} 
@@ -315,7 +315,7 @@ In further investigation of all kind of constraints and particularly the list of
 
 \subsection{Building Blocks}
 
-At the core, we use a very simple conceptual model for constraints (see Figure \ref{fig:RDF-CV-conceptual-model}), using a small lightweight vocabulary called \emph{RDF Constraints Vocabulary (RDF-CV)}\footnote{Formal specification and HTML documentation online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}.
+At the core, we use a very simple conceptual model for constraints (see Figure \ref{fig:RDF-CV-conceptual-model}), using a small lightweight vocabulary called \emph{RDF Constraints Vocabulary (RDF-CV)}.\footnote{Formal specification and HTML documentation online available at: \url{https://github.com/boschthomas/RDF-Constraints-Vocabulary}}
 \begin{figure}[H]
 	\centering
 		\includegraphics[width=0.80\textwidth]{images/RDF-CV.png}
@@ -334,14 +334,14 @@ This simple structure plus the constraining elements form the building blocks of
 
 \paragraph{Formal approach and semantics.}
 
-A cornerstone of the framework is the generic representation of a constraint, which can often be done using Description Logics, as for the \emph{minimum qualified cardinality restriction} {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person.}}  This way, the knowledge representation formalism \emph{Description Logics (DL)} \cite{Kroetzsch2012,Baader-2003,Baader-Nutt-2003} with its well-studied theoretical properties provides the foundational basis for the framework.
+A cornerstone of the framework is the generic representation of a constraint, which can often be done using Description Logics. For example the \emph{minimum qualified cardinality restriction} can be expressed as {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}}.  This way, the knowledge representation formalism \emph{Description Logics (DL)} \cite{Kroetzsch2012,Baader-2003,Baader-Nutt-2003} with its well-studied theoretical properties provides the foundational basis for the framework.
 
 It turned out that 64\% of the 81 constraint types are actually expressible in DL. Only for the remaining 36\%, other means, i.e., other constraining elements, had to be identified. This is not surprising if we consider that OWL is based on DL. When we talk about using DL to represent constraints, we have to establish once more that the semantics of OWL and DL differ from the semantics of constraint languages regarding the open world assumption (OWA) and the non-unique name assumption (nUNA). Both are usually assumed when dealing with OWL or DL, whereas validation usually assumes a closed world (CWA) and unique naming (UNA), i.e., if a desired property is missing, this leads to a violation and if two resources are named differently, they are assumed to be different resources. 
 
 We won't get into details about these assumptions here, but it has to be noted that the applied semantics have to be defined if validation is performed, as the results would differ under different semantics. Precisely, we found that for 56.8\% of the constraint types validation results differ if the CWA or the OWA is assumed 
 and for 66.6\% of the constraint types validation results are different in case the UNA or the nUNA is assumed \cite{BoschNolleAcarEckert2015}.
 
-For the purpose of a consistent implementation and transformation of constraints, constraints are \emph{semantically equivalent} if they detect the same set of violations regardless of RDF data, which means whenever the constraints are applied to any RDF data they point out the same violations.
+For the purpose of a consistent implementation and transformation of constraints, constraints are considered \emph{semantically equivalent} if they detect the same set of violations regardless of RDF data, which means whenever the constraints are applied to any RDF data they point out the same violations.
 
 \subsection{\emph{Simple Constraints}}
 In this and the following section, we provide examples for the representation of constraint types within the framework.
@@ -350,7 +350,8 @@ The \emph{minimum qualified cardinality restriction (R-75)} {\small\ms{Publicati
 which restricts publications to have at least one author which must be a person,
 is an example of a simple constraint on \emph{author}
 which holds for all individuals of the class \emph{Publication}.
-Table \ref{tab:property-constraint-cardinality-restriction} displays how the simple constraint is generically represented using the RDF-CV. Note that instead of the DL construct $\geq$, the constraining element \emph{minimum qualified cardinality restriction} may be used.
+Table \ref{tab:property-constraint-cardinality-restriction} displays how the simple constraint is generically represented using the RDF-CV. 
+% Note that instead of the DL construct $\geq$, the constraining element \emph{minimum qualified cardinality restriction} may be used.
 
 \begin{table}[H]
   \scriptsize
@@ -368,13 +369,16 @@ Table \ref{tab:property-constraint-cardinality-restriction} displays how the sim
 
 %The \emph{constraining element} indicates the actual type of constraint like DL concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), (in)equality (=, $\ne$), and further keywords for constraint types whose constraints cannot be expressed in DL (e.g., regular expressions and constraining facets). 
 
-The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element. Complex constraints need several constraining elements to be expressed. For the constraint type \emph{property domain (R-25, R-26)} whose constraints restrict domains of properties, e.g., there is only one constraining element with exactly the same identifier \emph{property domain}. For some constraint types, however, one constraining element is not sufficient to describe all possible constraints of a particular constraint type and therefore multiple constraining elements may be stated. The constraint type \emph{language tag cardinality (R-48, R-49)}, for instance, is used to restrict data properties to have a minimum, maximum, or exact number of relationships to literals with selected language tags. Thus, three constraining elements are needed to express each possible constraint of that constraint type.
+The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element, for instance \emph{property domain (R-25, R-26)} restricts domains of properties and there is only one constraining element with exactly the same identifier \emph{property domain}. Complex constraints, however, need several constraining elements to be expressed, for instance \emph{language tag cardinality (R-48, R-49)}\ke{ich hab das etwas umgestellt, bin mir aber nicht sicher, ob r-48/49 complex sind. Ggf. bitte anpassen, eventuell den satz oder absatz auch rausziehen vor "simple constraints", wenn da erst mal geklärt wird, was das ist.} is used to restrict data properties to have a minimum, maximum, or exact number of relationships to literals with selected language tags. Thus, three constraining elements are needed to express each possible constraint of that constraint type. This example also illustrates that the granularity of the constraint types varies and certainly often is debatable. Keep in mind that they correspond to requirements as identified by the working groups. The constraining elements, as in this example, are closer to atomic elements of constraints.
 
-If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely known terms from SPARQL (e.g., REGEX) or XML Schema constraining facets (e.g., \emph{xsd:minInclusive}) as constraining elements. For some constraint types like \emph{minimum qualified cardinality restrictions (R-75)}, it is more intuitive and concise to directly apply DL constructs like the \emph{at-least restriction} ($\geq$) as constraining elements. We provide a complete list of all 103 constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
+If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely known terms from SPARQL (e.g., REGEX) or XML Schema constraining facets (e.g., \emph{xsd:minInclusive}) as constraining elements. 
+% For some constraint types like \emph{minimum qualified cardinality restrictions (R-75)}, it is more intuitive and concise to directly apply DL constructs like the \emph{at-least restriction} ($\geq$) as constraining elements. 
+We provide a complete list of all 103 constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
 
 Additional to the constraining element, there are properties of simple constraints which can be seen as parameters for the constraining element. In some cases, a simple constraint is only complete when a \emph{constraining value} is stated in conjunction with the constraining element. Depending on the constraining element, a list of \emph{classes} can be provided, for example to determine the valid classes for a value. The constraining element of the constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g., is \emph{$\geq$}, the constraining value is \emph{1}, and the list of classes includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
+%\emph{Left} and \emph{right property lists} are lists usually containing properties the constraint is applied to. A typical example for a constraint with a right hand side list of properties would be a constraint of the type \emph{literal value comparison (R-43)} to express that birth dates must be before death dates ({\small\ms{birthDate $<$ deathDate}}). 
+The assignment of properties to the left or right property lists depends on the constraining element.
 
-\emph{Left} and \emph{right property lists} are lists usually containing properties the constraint is applied to. A typical example for a constraint with a right hand side list of properties would be a constraint of the type \emph{literal value comparison (R-43)} to express that birth dates must be before death dates ({\small\ms{birthDate $<$ deathDate}}). The assignment of properties to these lists happens relative to the constraining element.
 \emph{Object property paths} (\emph{R-55}) ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
 As \emph{Stephen-Hawking} is the author of the book \emph{A-Brief-History-Of-Time} 
@@ -428,7 +432,7 @@ Constraints of 36\% of the constraint types are not expressible in DL but can st
 %\ms{Janeway commandsEnterprise Voyager} and \ms{Voyager registryNumber "NCC-74656"\textasciicircum{}\textasciicircum{}RegistryNumber}, 
 %but not for the triples \ms{Picard commandsEnterprise Enterprise} and \ms{Enterprise registryNumber "NCC-1701-E"\textasciicircum{}\textasciicircum{}RegistryNumber}.
 
-Even though, constraints of the type \emph{literal pattern matching} cannot be expressed in DL, OWL 2 can be used to formulate this constraint:
+Even though constraints of the type \emph{literal pattern matching} cannot be expressed in DL, OWL 2 can be used to formulate this constraint:
 
 \begin{ex}
 ISBN a RDFS:Datatype ; owl:equivalentClass [ a RDFS:Datatype ;
@@ -685,6 +689,7 @@ $\top$ & isbn$^{-}$ & isbn$^{-}$ & - & inverse property & - \\
 Book & isbn$^{-}$ & - & - & functional property & - \\
 		\end{tabular}
 \end{table}
+\ke{eins der isbn- in der tabelle ist doch falsch, oder? inverse von isbn- ist doch isbn...}
 
 Keys, however, are even more general, i.e., a generalization of inverse functional properties \cite{Schneider2009}.
 A key can be a datatype, an object property, or a chain of properties.
@@ -718,7 +723,7 @@ the complex constraint can be simplified and thus formulated as a simple constra
     \textit{rdfcv:constrainingElement} "primary key" ] .
 \end{ex}
 
-Complex constraints of frequently used constraint types which correspond to DL axioms like \emph{transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity} can also be simplified in form of simple constraints. Although, these DL axioms are expressible by basic DL features, they can also be used in terms of syntactic sugar.
+Complex constraints of frequently used constraint types which correspond to DL axioms like \emph{transitivity}, \emph{symmetry}, \emph{asymmetry}, \emph{reflexivity} and \emph{irreflexivity} can also be simplified in form of simple constraints. Although these DL axioms are expressible by basic DL features, they can also be used in terms of syntactic sugar.
 
 Constraints of the \emph{irreflexive object properties (R-60)} constraint type ensure that no individual is connected by a given object property to itself \cite{Kroetzsch2012}. With the irreflexive object property constraint {\small\ms{$\top$ $\sqsubseteq$ $\neg$ $\exists authorOf.Self$}}, e.g., one can state that individuals cannot be authors of themselves. When represented using the RDF-CV, the complex constraint aggregates three simple constraints (see Table \ref{tab:irreflexive-object-properties-as-complex-constraints}).
 
@@ -844,7 +849,7 @@ $\top$ & authorOf & - & - & irreflexive property & - \\
 
 \subsection{Mapping Implementation}
 
-If a language developer would like to use the framework for the implementation of a constraint language or individual language constructs, the process is straight-forward. For a language construct, the corresponding constraint type has to be identified. Again we use the constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}} of the type \emph{minimum qualified cardinality restrictions (R-75)} which is supported in OWL 2:
+Using the framework for the implementation of a constraint language is straight-forward. For each language construct, the corresponding constraint type has to be identified. Again we use the constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person}} of the type \emph{minimum qualified cardinality restrictions (R-75)} which is supported in OWL 2:
 
 \begin{ex}[commandchars=\\\{\}]
 :Publication 
@@ -894,7 +899,7 @@ owl:Thing
 
 The SPIN engine is used to execute the mapping, the property \emph{spin:rule} links an rdfs:Class with SPARQL CONSTRUCT queries. Each query defines an inference rule that is applied to all instances of the associated class and its subclasses. The inference rule defines how additional triples can be inferred from what is stated in the WHERE clause. For each binding of the pattern in the WHERE clause of the rule, the triple templates from the CONSTRUCT clause are instantiated and added as inferred triples to the underlying model. At query execution time, the SPARQL variable \emph{?this} is bound to the current instance of the class. As each resource per default is assigned to the class \emph{owl:Thing}, this inference rule is evaluated for each subject of the input RDF graph.
 
-The framework and therefore the constraint types are implemented in exactly the same way by providing other SPIN mappings which encompass the SPIN/SPARQL queries that validate constraints and produce constraint violation messages if a constraint is violated, as described in our previous paper about the DSP implementation \cite{BoschEckert2014-2}\footnote{At the time of this writing, not all mappings for the constraint types are implemented, but of course the implementations can be complemented and adapted to own requirements, as needed. The most recent implementation can be found here: \url{https://github.com/boschthomas/rdf-validation/blob/master/SPIN/RDF-CV-2-SPIN.ttl}}.
+The framework and therefore the constraint types are implemented in exactly the same way by providing other SPIN mappings which encompass the SPIN/SPARQL queries that validate constraints and produce constraint violation messages if a constraint is violated, as described in our previous paper about the DSP implementation \cite{BoschEckert2014-2}.\footnote{At the time of this writing, not all mappings for the constraint types are implemented, but of course the implementations can be complemented and adapted to own requirements, as needed. The most recent implementation can be found here: \url{https://github.com/boschthomas/rdf-validation/blob/master/SPIN/RDF-CV-2-SPIN.ttl}}
 
 \subsection{Constraint Transformation}
 
@@ -940,7 +945,7 @@ and uses SPARQL to specify logical constraints and inference rules \cite{Fuerber
 
 The \emph{Web Ontology Language (OWL)} \cite{W3C-OWL2-Primer-2012} formally specifies the intended semantics of conceptual models about data and therefore enables software to understand data. OWL has become a popular standard for data representation, data exchange, and data integration of heterogeneous data sources. Besides that, the retrieval of data benefits from semantic knowledge specified using OWL. In combination with the OWL-based \emph{Semantic Web Rule Language (SWRL)} \cite{Horrocks04}, OWL provides facilities for developing very powerful reasoning services. Reasoning on RDF data enables to derive implicit data out of explicitly stated data. OWL is based on formal logic and on the subject-predicate-object triples from RDF. OWL is actually a description logic with underlying formal semantics which allows one to assign truth values to syntactic expressions. OWL specifies semantic information about specific domains, describes relations between domain classes, and thus allows the sharing of conceptualizations. 
 
-OWL is an expressive language for which DL provides the foundational basis and which offers knowledge representation and reasoning services. Validation, however, is not the primary purpose of its design which has lead to claims that OWL cannot be used for validation. In practice, however, OWL is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should look like. In general, RDF documents follow the syntactic structure and the semantics of RDFS/OWL ontologies which could therefore not only be used for reasoning but also for validation.
+Because of the design of OWL for reasoning, there are claims that OWL cannot be used for validation. In practice, however, OWL is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should look like. In general, RDF documents follow the syntactic structure and the semantics of RDFS/OWL ontologies which could therefore not only be used for reasoning but also for validation.
 
 \emph{Stardog Integrity Constraint Validation (ICV)} and the \emph{Pellet Integrity Constraint Validator (ICV)} use OWL 2 constructs to formulate constraints. The Pellet ICV\footnote{\url{http://clarkparsia.com/pellet/icv}} is a proof-of-concept extension for the OWL 2 DL reasoner \emph{Pellet} \cite{sirin2007pellet}. Stardog ICV\footnote{\url{http://docs.stardog.com/#_validating_constraints}} validates RDF data stored in a Stardog database according to constraints which may be written in SPARQL, OWL 2, or SWRL \cite{Horrocks04}. 
 
